--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
    <section class="toplist"></section>
  <nav>
-    <li id="github"> Github</li>
-    <li id="LinkedIn"> LinkedIn</li>
+    <li id="About Me"> Github</li>
+    <li id="Work"> LinkedIn</li>
     <li id="Contact"> Contact</li>
 </nav>
 </section>
