Added link to eadme

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <p>I know this looks like hot trash right now, but someday it won't.</p>
        </section>
        <!--Work sample section, mostly placeholder images for now-->
-       <section id="work" class="work">
+       <section id="work" class="content">
          <h2>Work</h2>
          
          <img src="assets/images/HoriseonRefactor.png" alt= "Horiseon website Refactor Screenshot" class="large" /> 
